@@ -1,0 +1,10 @@
+#include "movegentest.h"
+
+void performanceTest(Board *pBoard, int depth) {
+	// unfinished
+}
+
+U64 recursiveMoveCount(Board *pBoard, int depth) {
+	// unfinished
+	return 0;
+}
